# FYS3150

book/projects/: project5.md
book/writing_reports/: checklist.md
code_examples/low_level/: CMakeLists.txt  README.md  examples.cpp  mwe.cpp
code_examples/low_level/include/: box.h  constants.h  precomp.h
code_examples/low_level/include/aos/: actor.h  box.h
code_examples/low_level/include/ecs/: box.h  components.h  registry.h  storage.h
code_examples/low_level/include/optimisation_soa/: box.h  hole.h  particle.h  policies.h
code_examples/low_level/include/soa/: box.h
code_examples/low_level/src/aos/: actor.cpp  box.cpp
code_examples/low_level/src/ecs/: box.cpp
code_examples/low_level/src/optimisation_soa/: box.cpp  hole.cpp  particle.cpp
code_examples/low_level/src/soa/: box.cpp
code_examples/write_numpy_binary_files/: README.md  main.cpp  read_npy_file.py
lecture_notes/2025/: README.md
